--- a/views/login.tt
+++ b/views/login.tt
@@ -1,255 +1,64 @@
-<div class="container">
-    [% IF reset_code %]
-        <div class="jumbotron">
-            [% IF password %]
-                <h1>Welcome!</h1>
-                <div class="app_welcome">
-                    Thank you for visiting [% site_name | html %]. You can now <input type="checkbox" id="reveal_password"><label for="reveal_password">reveal your password.</label>
-                    <div class="reveal_area">
-                        <p class="new_password">
-                            Your new password is: [% password %]
-                        </p>
-
-                        <p>
-                            Please make a secure note of this password now, as it will not be displayed again.
-                        </p>
-
-                        <p class="text-right">
-                            <a class="btn btn-primary btn-lg" href="[% url.page %]/login">Login</a>
-                        </p>
-                    </div>
-                </div>
-           [% ELSE %]
-                <h1>New password</h1>
-                <form method="post">
-                    <input type="hidden" name="csrf_token" value="[% csrf_token %]">
-                    <input type="submit" name="execute_reset" class="btn btn-lg btn-block" value="Continue to password retrieval">
-                </form>
-            [% END %]
+<div class="login__main-container col-md-4 col-md-offset-4">
+    
+    <div class="login__logo">
+        <img src="[% url.page %]/images/logo.svg">
+    </div>
+    
+    <form class="login__form" method="post" autocomplete="off">
+        <div class="login__head">
+            <h2 class="login__title">
+                Please sign in
+            </h2>
         </div>
-    [% ELSE %]
-        <div class="row" style="margin-top:20px">
-            <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
-                <form method="post" autocomplete="off">
-                    <input type="hidden" name="csrf_token" value="[% csrf_token %]">
-                    <h1>Please Sign In</h1>
-                    <hr>
-                    <div class="row">
-                        <div class="col-xs-12 col-sm-8 col-md-8">
-                            <div class="form-group">
-                                <label for="username">Email address:</label>
-                                <input tabindex="1" type="email" name="username" id="username" class="form-control input-lg" placeholder="name@example.com" value="[% username %]">
-                            </div>
-                        </div>
-                        [% UNLESS site.hide_account_request %]
-                            <div class="col-xs-12 col-sm-4 col-md-4">
-                                <button type="button" class="btn btn-link register" data-toggle="modal" data-target="#modalregister">Request Account</button>
-                            </div>
-                        [% END %]
-                    </div>
-                    <div class="row">
-                        <div class="col-xs-12 col-sm-8 col-md-8">
-                            <div class="form-group">
-                                <label for="password">Password:</label>
-                                <input tabindex="2" type="password" name="password" id="password" class="form-control input-lg">
-                            </div>
-                        </div>
-                        <div class="col-xs-12 col-sm-4 col-md-4">
-                            <button type="button" class="btn btn-link reset-password" data-toggle="modal" data-target="#modal-reset-password">Reset Password</button>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-xs-12 col-sm-8 col-md-8">
-                            <span class="show-password">
-                                <input tabindex="3" type="checkbox" name="show_password" id="show_password" class="visually-hidden-opacity">
-                                <label for="show_password">
-                                    <span class="glyphicon glyphicon-check" aria-hidden="true"></span>
-                                    Show password
-                                </label>
-                            </span>
-
-                            <span class="remember-me">
-                                <input tabindex="3" type="checkbox" name="remember_me" id="remember" [% IF username %]checked="checked"[% END %] class="[% IF username %]remember--checked[% END %] visually-hidden-opacity">
-                                <label for="remember">
-                                    <span class="glyphicon glyphicon-check" aria-hidden="true"></span>
-                                    Remember email address
-                                </label>
-                            </span>
-                            <hr>
-                            <input tabindex="4" type="submit" name="signin" class="btn btn-lg btn-success btn-block" value="Sign In">
-                        </div>
-                    </div>
-            </form>
+        <div class="login__fields">
+            <div class="form-group">
+                
+                <div class="input">
+                    <label for="username">
+                        Email address
+                    </label>
+                    <input tabindex="1" type="email" name="username" id="username" class="form-control"
+                           placeholder="name@example.com" value="[% username %]">
+                </div>
+                
+                <div class="checkbox">
+                    <input tabindex="2" type="checkbox" name="remember_me" id="remember" [% IF username
+                           %]checked="checked" [% END %]
+                           class="[% IF username %]remember--checked[% END %] visually-hidden-opacity">
+                    <label for="remember">
+                        Remember email address
+                    </label>
+                </div>
+            
+            </div>
+            
+            <div class="form-group">
+                
+                <div class="input">
+                    <label for="password">
+                        Password
+                    </label>
+                    <input tabindex="3" type="password" name="password" id="password" class="form-control"
+                           placeholder="password">
+                </div>
+                
+                <a href="[% url.page %]/reset" class="link">Reset password</a>
+            
             </div>
         </div>
-
-        [% BLOCK modal_close_button %]
-            <button type="button" class="close" data-dismiss="modal">
-                <span class="close-mark" aria-hidden="true">&times;</span>
-                close
+        
+        <div class="login__btns"><button tabindex="4" type="submit" name="signin" class="btn btn-default">
+                <span>Sign in</span>
             </button>
-        [% END %]
-
-        <!-- Modal -->
-        <div class="modal fade" id="modal-reset-password" tabindex="-1" role="dialog" aria-labelledby="reset-password-heading" style="display:none" data-open-on-load=[% IF error_modal == "resetpw" %]true[% ELSE %]false[% END %]>
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <form method="post" autocomplete="off" enctype="multipart/form-data">
-                    <input type="hidden" name="csrf_token" value="[% csrf_token %]">
-                    <div class="modal-header">
-                        <h1 class="modal-title" id="reset-password-heading">Reset password</h1>
-                        [% PROCESS modal_close_button %]
-                   </div>
-                    <div class="modal-body">
-                        [% IF error %]
-                            <div class="alert alert-danger" role="alert">Error: [% error | html %]</div>
-                        [% END %]
-                        <div class="form-group">
-                            <p>Enter your email address to receive a password reset link.</p>
-                            <label for="email">Email address:</label>
-                            <input type="email" class="form-control" name="emailreset" id="emailreset" placeholder="name@example.com">
-                        </div>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                        <button type="submit" name="resetpwd" value="submit" class="btn btn-primary">Submit</button>
-                    </div>
-                    </form>
-                </div><!-- /.modal-content -->
-            </div><!-- /.modal-dialog -->
-        </div><!-- /.modal -->
-
-        <!-- Modal -->
-        <div class="modal fade" id="modalregister" tabindex="-1" role="dialog" aria-labelledby="request-account-heading" style="display:none" data-open-on-load=[% IF error_modal == "register" %]true[% ELSE %]false[% END %]>
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <form method="post" autocomplete="off">
-                    <input type="hidden" name="csrf_token" value="[% csrf_token %]">
-                    <div class="modal-header">
-                        <h1 class="modal-title" id="request-account-heading">Request account</h1>
-                        [% PROCESS modal_close_button %]
-                    </div>
-                    <div class="modal-body">
-                        [% IF error %]
-                            <div class="alert alert-danger" role="alert">Error: [% error | html %]</div>
-                        [% END %]
-                        [% IF register_text %]
-                            <p>[% register_text | html %]</p>
-                        [% END %]
-                        <div class="form-group">
-                            <label for="firstname">First name:</label>
-                            <input type="text" class="form-control" id="firstname" name="firstname">
-                        </div>
-                        <div class="form-group">
-                            <label for="surname">Surname:</label>
-                            <input type="text" class="form-control" id="surname" name="surname">
-                        </div>
-                        [% IF site.register_show_title %]
-                            <div class="form-group">
-                                <label for="title">Title:
-                                    [% IF site.register_title_help %]
-                                        <span style="font-weight:normal !important">[% site.register_title_help | html %]</span>
-                                    [% END %]
-                                </label>
-                                <select class="form-control" id="title" name="title">
-                                    <option></option>
-                                    [% FOREACH title IN titles %]
-                                        <option value="[% title.id %]">[% title.name | html_entity %]</option>
-                                    [% END %]
-                                </select>
-                            </div>
-                        [% END %]
-                        <div class="form-group">
-                            <label for="email">Email:
-                                [% IF site.register_email_help %]
-                                    <span style="font-weight:normal">[% site.register_email_help | html %]</span>
-                                [% END %]
-                            </label>
-                            <input type="text" class="form-control" id="email" name="email">
-                        </div>
-                        [% IF site.register_freetext1_name %]
-                            <div class="form-group">
-                                <label for="freetext1">[% site.register_freetext1_name | html %]:
-                                    [% IF site.register_freetext1_help %]
-                                        <span style="font-weight:normal !important">[% site.register_freetext1_help | html %]</span>
-                                    [% END %]
-                                </label>
-                                <input type="text" class="form-control" id="freetext1" name="freetext1">
-                            </div>
-                        [% END %]
-                        [% IF site.register_freetext2_name %]
-                            <div class="form-group">
-                                <label for="freetext2">[% site.register_freetext2_name | html %]:
-                                    [% IF site.register_freetext2_help %]
-                                        <span style="font-weight:normal !important">[% site.register_freetext2_help | html %]</span>
-                                    [% END %]
-                                </label>
-                                <input type="text" class="form-control" id="freetext2" name="freetext2">
-                            </div>
-                        [% END %]
-                        [% IF site.register_show_organisation %]
-                            <div class="form-group">
-                                <label for="organisation">[% site.register_organisation_name %]:
-                                    [% IF site.register_organisation_help %]
-                                        <span style="font-weight:normal !important">[% site.register_organisation_help | html %]</span>
-                                    [% END %]
-                                </label>
-                                <select class="form-control" id="organisation" name="organisation">
-                                    <option></option>
-                                    [% FOREACH organisation IN organisations %]
-                                        <option value="[% organisation.id %]">[% organisation.name | html_entity %]</option>
-                                    [% END %]
-                                </select>
-                            </div>
-                        [% END %]
-                        [% IF site.register_show_department %]
-                            <div class="form-group">
-                                <label for="department_id">[% site.department_name | html %]:
-                                    [% IF site.register_department_help %]
-                                        <span style="font-weight:normal !important">[% site.register_department_help | html %]</span>
-                                    [% END %]
-                                </label>
-                                <select class="form-control" id="department_id" name="department_id">
-                                    <option></option>
-                                    [% FOREACH department IN departments %]
-                                        <option value="[% department.id %]">[% department.name | html_entity %]</option>
-                                    [% END %]
-                                </select>
-                            </div>
-                        [% END %]
-                        [% IF site.register_show_team %]
-                            <div class="form-group">
-                                <label for="team_id">[% site.team_name | html %]:
-                                    [% IF site.register_team_help %]
-                                        <span style="font-weight:normal !important">[% site.register_team_help | html %]</span>
-                                    [% END %]
-                                </label>
-                                <select class="form-control" id="team_id" name="team_id">
-                                    <option></option>
-                                    [% FOREACH team IN teams %]
-                                        <option value="[% team.id %]">[% team.name | html_entity %]</option>
-                                    [% END %]
-                                </select>
-                            </div>
-                        [% END %]
-                        <div class="form-group">
-                            <label for="account_request_notes">Notes:
-                                [% IF site.register_notes_help %]
-                                    <span style="font-weight:normal !important">[% site.register_notes_help | html %]</span>
-                                [% END %]
-                            </label>
-                            <textarea class="form-control" name="account_request_notes" id="account_request_notes" rows="5"></textarea>
-                        </div>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                        <button type="submit" name="register" value="submit" class="btn btn-primary">Submit</button>
-                    </div>
-                    </form>
-                </div><!-- /.modal-content -->
-            </div><!-- /.modal-dialog -->
-        </div><!-- /.modal -->
+        </div>
+        
+        <input type="hidden" name="csrf_token" value="[% csrf_token %]">
+    </form>
+    
+    [% UNLESS site.hide_account_request %]
+    <div class="login__request-container">
+        <a href="[% url.page %]/register" class="login__request">Request an account</a>
+    </div>
     [% END %]
 
 </div>
-
