Add chronological record view functionality
This commit adds a feature to show the chronological edits of a record.
It retrieves all versions of a record and then compares them one-by-one.

For curval values that can be edited within the record, it relies on the
version times of the records matching. As such, to work on existing
edits, the times will need to be updated to match (until this commit the
times would differ slightly depending on the exact time each record was
written)

--- a/views/edit.tt
+++ b/views/edit.tt
@@ -78,7 +78,7 @@
                 <div class="panel panel-default">
                     <div class="panel-heading">Version history</div>
                     <div class="panel-body">
-                        <div class="btn-group-vertical">
+                        <div class="btn-group-vertical" role="group">
                             [% dropdown_title = "Select version..." %]
                             [% FOREACH version IN record.versions %]
                                 [% IF version.id == record.record_id %]
@@ -86,7 +86,8 @@
                                 [% END %]
                             [% END %]
 
-                            <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">[% dropdown_title | html %] <b class="caret"></b></button>
+                            <a class="btn btn-default remove-unload-handler" href="/chronology/[% record.current_id %]">View chronology</a>
+                            <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">Historical versions <b class="caret"></b></button>
                             <ul id="menu1" class="dropdown-menu scrollable-menu" role="menu" aria-labelledby="drop4">
                                 [% IF record.deleted %]
                                     [% history_link = "purgehistory" %]
