--- a/sass/ctrlo-bootstrap.scss
+++ b/sass/ctrlo-bootstrap.scss
@@ -142,6 +142,12 @@ dl {
 dd {
         margin-bottom:10px;
 }
+dl.chronology {
+        margin-bottom:5px;
+}
+.chronology > dd {
+        margin-bottom:0;
+}
 dt {
         font-weight:bold;
 }
